Added Logic to Ignore All-Day Events